fix(dcim): propagate location models through UI
